--- a/[CP] VisitingTales/i18n/default.json
+++ b/[CP] VisitingTales/i18n/default.json
@@ -4,6 +4,9 @@
   "config.section.PerfectionScore.name": "Perfection Score",
   "config.AddedNPCsAffectPerfection.name": "Added NPCs Affect Perfection",
   "config.AddedNPCsAffectPerfection.description": "Whether you need to reach maximum heart with NPCs added by this mod to reach 100% perfection in-game. This won't have any effect if player already reach 100% perfection.",
+
+  "config.MinimumDaysBetweenNPCsIntroduction.name": "Days Between NPCs Introduction",
+  "config.MinimumDaysBetweenNPCsIntroduction.description": "Minimum days required between introduction event for NPCs added by this mod. This is meant to avoid event pile up when mod is added to an on-going save. When set to 0 multiple NPCs introduction can take place in one day.",
   //Used in Event
   "ItsBenterUnmetCharacter": "???",
   //Karl
