Work on CT dialogue

--- a/[CP] VisitingTales/i18n/default.json
+++ b/[CP] VisitingTales/i18n/default.json
@@ -5,8 +5,8 @@
   "config.AddedNPCsAffectPerfection.name": "Added NPCs Affect Perfection",
   "config.AddedNPCsAffectPerfection.description": "Whether you need to reach maximum heart with NPCs added by this mod to reach 100% perfection in-game. This won't have any effect if player already reach 100% perfection.",
 
-  "config.MinimumDaysBetweenNPCsIntroduction.name": "Days Between NPCs Introduction",
-  "config.MinimumDaysBetweenNPCsIntroduction.description": "Minimum days required between introduction event for NPCs added by this mod. This is meant to avoid event pile up when mod is added to an on-going save. When set to 0 multiple NPCs introduction can take place in one day.",
+  "config.MinDaysBetweenIntroduction.name": "Days Between NPCs Introduction",
+  "config.MinDaysBetweenIntroduction.description": "Minimum days required between introduction event for NPCs added by this mod. This is meant to avoid event pile up when mod is added to an on-going save. When set to 0, multiple NPCs introduction still cannot take place in one day.",
   //Used in Event
   "ItsBenterUnmetCharacter": "???",
   //Karl
@@ -94,4 +94,31 @@
   "ItsBenterDiane.Dialogue.10H-Curator-4": "One of the challenges of curating a museum is maintaining the delicate balance between preservation and accessibility.",
   "ItsBenterDiane.Dialogue.10H-Curator-5": "The museum's exhibits may seem static, but they constantly evolve as new discoveries are made. It's a thrilling process.",
   "ItsBenterDiane.Dialogue.10H-Curator-6": "I've been fortunate to witness the impact of the museum on the lives of its visitors, sparking their curiosity and igniting a love for history and knowledge.",
+  //Conversation topic
+  "KarlIntroduction.Pam": "You know that tall guy with moustache?#$b#He gave me fish!",
+  "KarlIntroduction.Penny_LivingWithPam": "We had a lovely roasted fish for dinner. $1#$e#Mom said she got it from a guy that takes the bus.",
+  "KarlIntroduction.Penny_NotLivingWithPam": "Mom said she got a fish from a guy a that takes the bus.#$b# Isn't that just so random? $1#$e#You as well honey? What a coincidence.",
+  "KarlIntroduction.Linus": "Oh Karl, looks like a kind fella that one.#$e#He didn't treat me badly.",
+  "KarlIntroduction.Robin": "@, have you met Karl? He was fishing on the lake the other day.#$b#Said he'd like to come by again. $1#$e#I totally don't mind seeing a new face around here.",
+  "KarlIntroduction.Sebastian": "So this Karl, is he really come all the way here just to fish?",
+  "KarlIntroduction.Demetrius": "Fishing is fine. In fact, it could help controlling overpopulation.#$e#I'd be sure to tell that Karl guy the next time I see him. $1",
+  "KarlIntroduction.Maru": "I think mom is excited at the prospect of a regular visitor to the mountain.#$b#It can get a bit lonely sometimes.",
+  "KarlIntroduction.Willy": "I heard of Karl, a new fisherman in town. $1#$b#Well, he isn't quite a fisherman but he will definitely spice up the local fishing scene. $3",
+  "KarlIntroduction.Susan": "Karl? Oh yes, I believe I saw him fishing.#$b#What else can I say?",
+  "KarlIntroduction.1.Karl": "Hey it's @, we met again!#$e#I hope you are well @. $1#$e#Going to fish sometime?",
+  "DianeIntroduction.Lewis": "Ah @, Diane said she would like to visit the town again. Isn't that nice?",
+  "DianeIntroduction.Marnie_RelationshipWithLewis": "I saw Mr. Lewis with that lady. $3#$b#They seemed very happy walking around the town... $2#$b#*sigh* $2",
+  "DianeIntroduction.Marnie_NoRelationshipWithLewis": "I heard Lewis gave a tour of the town.#%b#I hope he treated the lady well...",
+  "DianeIntroduction.Sam": "Oh yeah, I saw Lewis and that woman when skateboarding the other day.#$b#Of course, our mayor was not pleased to see me at all. $1",
+  "DianeIntroduction.Gus": "Diane, quite a nice lady isn't she? I wonder what gets her to this town though.",
+  "DianeIntroduction.Caroline": "Lewis visit the shop with Diane awhile back. She is very sweet.#$b#Yet, all Pierre do is commenting on her accessories. $2#$b#Sometimes I just can't with him. $2",
+  "DianeIntroduction.Clint": "Umm... Yes, Lewis came here and show the place around with Diane.#$b#She has a wonderdul smile isn't she? $1",
+  "DianeIntroduction.Emily": "Diane, her aura is quite cloudy. It's waiting for the sun to shine through. $3#$b#But then, there's also nothing wrong with cloudy weather too. $0",
+  "DianeIntroduction.Jas": "... Mrs. Diane looks like a princess.#$b#I wonder if she would visit us again...",
+  "DianeIntroduction.Vincent": "I didn't get to meet Mrs. Diane... $2",
+  "DianeIntroduction.Shane": "So someone arranged a tour around this town. $3#$b#Bah, why do I care? $3",
+  "DianeIntroduction.Elliot": "*mumble*... Diane, a lady of class and heart... *mumble*#$b#Oh, I'm just imagining writing a passage from an earlier encounter.#$e#Did you get to meet her?",
+  "DianeIntroduction.Penny": "I met Lewis and Diane when they walked around the town.#$b#We stopped and had a nice conversation going. $1",
+  "DianeIntroduction.Rosa": "News reached me that Lewis gave someone a tour around the town... Of course he didn't bother to show her this far-far away land.",
+  "DianeIntroduction.Juliet": "That Diane, bet she comes from money.#$b#Oh sweetheart, it's not only the jewelry that tells.",
 }
