--- a/[CP] VisitingTales/i18n/default.json
+++ b/[CP] VisitingTales/i18n/default.json
@@ -4,37 +4,34 @@
   "config.section.PerfectionScore.name": "Perfection Score",
   "config.AddedNPCsAffectPerfection.name": "Added NPCs Affect Perfection",
   "config.AddedNPCsAffectPerfection.description": "Whether you need to reach maximum heart with NPCs added by this mod to reach 100% perfection in-game. This won't have any effect if player already reach 100% perfection.",
-
   "config.MinDaysBetweenIntroduction.name": "Days Between NPCs Introduction",
   "config.MinDaysBetweenIntroduction.description": "Minimum days required between introduction event for NPCs added by this mod. This is meant to avoid event pile up when mod is added to an on-going save. When set to 0, multiple NPCs introduction still cannot take place in one day.",
   //Used in Event
   "ItsBenterUnmetCharacter": "???",
   //Karl
   "ItsBenterKarl.Name": "Karl",
-  "ItsBenterKarl.Gifts_Loved": "You've got a keen eye for what I like. Much thanks @.",
-  "ItsBenterKarl.Gifts_Liked": "Thank you, @. You've made my day brighter.",
+  "ItsBenterKarl.Gifts_Loved": "This is superb! You just made my day @.",
+  "ItsBenterKarl.Gifts_Liked": "Thank you, @! What a nice gift.",
   "ItsBenterKarl.Gifts_Neutral": "Oh, you got me a little something",
   "ItsBenterKarl.Gifts_Disliked": "Well, this is, um, quite unexpected. Thanks, @.",
   "ItsBenterKarl.Gifts_Hated": "Well, I never expected to get something like this.",
-
   "ItsBenterKarl.Dialogue.spring_5": "Hey @, hope everything on %farm farm is going well and ready for the year ahead.",
   "ItsBenterKarl.Dialogue.spring_13": "I was chatting with Lewis. The mayor got quite a story about egg festival he attended in his younger days.",
   //Diane
   "ItsBenterDiane.Name": "Diane",
   "ItsBenterDiane.Gifts_Loved": "Oh, @, you truly have a discerning taste! This is absolutely splendid.",
   "ItsBenterDiane.Gifts_Liked": "This is a lovely gesture. You have a good eye @.",
-  "ItsBenterDiane.Gifts_Neutral": "A gift? Well, tt's always interesting to see what people choose.",
+  "ItsBenterDiane.Gifts_Neutral": "A gift? Oh well, it's always interesting to see.",
   "ItsBenterDiane.Gifts_Disliked": "This isn't quite to my taste. But thank you for thinking of me.",
-  "ItsBenterDiane.Gifts_Hated": "I must be honest, @, this gift of yours leaves me a bit baffled.",
-  
+  "ItsBenterDiane.Gifts_Hated": "I must be honest, @, this gift of yours... It leaves me baffled. $2",
   "ItsBenterDiane.Dialogue.00H-1": "Greetings, dear. I trust you're well today?",
   "ItsBenterDiane.Dialogue.00H-2": "I find the architecture in this town rather quaint. Charming in its way.",
   "ItsBenterDiane.Dialogue.00H-3": "Ah, the seasons in the valley are so much more... palpable than what I'm used to.#$e#It makes me think about how little space there is for nature in the city.",
   "ItsBenterDiane.Dialogue.00H-4": "I've always wondered why small towns like this are so charming.",
   "ItsBenterDiane.Dialogue.00H-5": "The town's museum has been getting quite a bit of attention, I hear.#$e#I wouldn't have expected a small town like this to have such an extensive collection.",
   "ItsBenterDiane.Dialogue.00H-6": "I've heard some talk about the local farming community. How fascinating.",
-  "ItsBenterDiane.Dialogue.00H-7": "Life has never been easy for me, compared to the lives of your fellow townsfolk.",
-  "ItsBenterDiane.Dialogue.02H-1": "You know, I've always had a soft spot for classic novels. I should peruse your library's collection.",
+  "ItsBenterDiane.Dialogue.00H-7": "The simplicity of life here is a stark contrast to how it usually is for me.",
+  "ItsBenterDiane.Dialogue.02H-1": "You know, I've always had a soft spot for old books. Suppose the town library must hold a number of them.",
   "ItsBenterDiane.Dialogue.02H-2": "The townsfolk seem to enjoy your company. It must be nice, to have such a supportive community.",
   "ItsBenterDiane.Dialogue.02H-3": "I've been reading some historical accounts of Dwarven society lately. I'm fascinated by their culture.",
   "ItsBenterDiane.Dialogue.02H-4": "Your local museum really is lovely. Do you have a favorite item in the collection?",
@@ -65,7 +62,7 @@
   "ItsBenterDiane.Dialogue.06H-4": "Isn't the air in Stardew Valley invigorating? It's a welcome change from the city's pollution.",
   "ItsBenterDiane.Dialogue.06H-5": "Paintings can evoke such profound emotions. I often find myself lost in the stories behind the canvases.",
   "ItsBenterDiane.Dialogue.06H-6": "The children here are so full of curiosity and potential. I think they have bright futures ahead of them, as long as they're given the right guidance.",
-  "ItsBenterDiane.Dialogue.06H-7": "One of the best books I've discovered is 'Chatters of the Past'#$b#It's a Regency romance that offers a glimpse into the day-to-day lives of ordinary people.",
+  "ItsBenterDiane.Dialogue.06H-7": "One of the best books I've discovered is 'Chatters of the Past'#$b#It's a regency romance that offers a glimpse into the day-to-day lives of ordinary people.",
   "ItsBenterDiane.Dialogue.06H-8": "Do you ever feel melancholy watching the seasons change? The scenery is beautiful, to be sure, but there's something sad about it.",
   "ItsBenterDiane.Dialogue.06H-9": "My body is telling me to take it easy today. Perhaps a gentle stroll in the fresh air will help.#$b#I said gentle! Please don't worry about me.",
   "ItsBenterDiane.Dialogue.06H-10": "Greetings, my dear @. I hope the day finds you in good spirits.",
@@ -95,17 +92,29 @@
   "ItsBenterDiane.Dialogue.10H-Curator-5": "The museum's exhibits may seem static, but they constantly evolve as new discoveries are made. It's a thrilling process.",
   "ItsBenterDiane.Dialogue.10H-Curator-6": "I've been fortunate to witness the impact of the museum on the lives of its visitors, sparking their curiosity and igniting a love for history and knowledge.",
   //Conversation topic
+  "pamHouseUpgrade.ItsBenterKarl": "",
+  "pamHouseUpgrade.ItsBenterDiane": "",
+  "pamHouseUpgrade.ItsBenterPaolo": "",
+  "pamHouseUpgrade.ItsBenterRiri": "",
+  "pamHouseUpgradeAnonymous.ItsBenterKarl": "",
+  "pamHouseUpgradeAnonymous.ItsBenterDiane": "",
+  "pamHouseUpgradeAnonymous.ItsBenterPaolo": "",
+  "pamHouseUpgradeAnonymous.ItsBenterRiri": "",
+  "movieTheater.ItsBenterKarl": "",
+  "movieTheater.ItsBenterDiane": "",
+  "movieTheater.ItsBenterPaolo": "",
+  "movieTheater.ItsBenterRiri": "",
   "KarlIntroduction.Pam": "You know that tall guy with moustache?#$b#He gave me fish!",
-  "KarlIntroduction.Penny_LivingWithPam": "We had a lovely roasted fish for dinner. $1#$e#Mom said she got it from a guy that takes the bus.",
-  "KarlIntroduction.Penny_NotLivingWithPam": "Mom said she got a fish from a guy a that takes the bus.#$b# Isn't that just so random? $1#$e#You as well honey? What a coincidence.",
+  "KarlIntroduction.Penny_LivingWithPam": "We had a lovely roasted fish for dinner. $1#$e#Mom said she got it from a guy that got here just to fish.",
+  "KarlIntroduction.Penny_NotLivingWithPam": "Mom said she got a fish from a guy a guy that got here just to fish.#$b# Isn't that just so random? $1#$e#You as well honey? What a coincidence.",
   "KarlIntroduction.Linus": "Oh Karl, looks like a kind fella that one.#$e#He didn't treat me badly.",
-  "KarlIntroduction.Robin": "@, have you met Karl? He was fishing on the lake the other day.#$b#Said he'd like to come by again. $1#$e#I totally don't mind seeing a new face around here.",
-  "KarlIntroduction.Sebastian": "So this Karl, is he really come all the way here just to fish?",
+  "KarlIntroduction.Robin": "@, have you met Karl? He was fishing on the lake the other day.#$b#Said he'd like to come by again. $1#$e#I'm totally not against seeing a new face around here. $1",
+  "KarlIntroduction.Sebastian": "So this Karl, does he come all the way here just to fish?",
   "KarlIntroduction.Demetrius": "Fishing is fine. In fact, it could help controlling overpopulation.#$e#I'd be sure to tell that Karl guy the next time I see him. $1",
   "KarlIntroduction.Maru": "I think mom is excited at the prospect of a regular visitor to the mountain.#$b#It can get a bit lonely sometimes.",
   "KarlIntroduction.Willy": "I heard of Karl, a new fisherman in town. $1#$b#Well, he isn't quite a fisherman but he will definitely spice up the local fishing scene. $3",
   "KarlIntroduction.Susan": "Karl? Oh yes, I believe I saw him fishing.#$b#What else can I say?",
-  "KarlIntroduction.1.Karl": "Hey it's @, we met again!#$e#I hope you are well @. $1#$e#Going to fish sometime?",
+  "KarlIntroduction.1.ItsBenterKarl": "Hey it's @, we met again!#$e#I hope you are well @. $1#$e#Going to fish sometime?",
   "DianeIntroduction.Lewis": "Ah @, Diane said she would like to visit the town again. Isn't that nice?",
   "DianeIntroduction.Marnie_RelationshipWithLewis": "I saw Mr. Lewis with that lady. $3#$b#They seemed very happy walking around the town... $2#$b#*sigh* $2",
   "DianeIntroduction.Marnie_NoRelationshipWithLewis": "I heard Lewis gave a tour of the town.#%b#I hope he treated the lady well...",
