Added Karl dialogue

--- a/[CP] VisitingTales/i18n/default.json
+++ b/[CP] VisitingTales/i18n/default.json
@@ -17,6 +17,62 @@
   "ItsBenterKarl.Gifts_Hated": "Well, I never expected to get something like this.",
   "ItsBenterKarl.Dialogue.spring_5": "Hey @, hope everything on %farm farm is going well and ready for the year ahead.",
   "ItsBenterKarl.Dialogue.spring_13": "I was chatting with Lewis. The mayor got quite a story about egg festival he attended in his younger days.",
+  
+  "ItsBenterKarl.Dialogue.0H-1": "Office life can be a grind, but it pays the bills.#$e#That's one reason I'm here. $1",
+  "ItsBenterKarl.Dialogue.0H-2": "Fishing is just a fine way to take a break from the work. #$b#Give it a go.",
+  "ItsBenterKarl.Dialogue.0H-3": "I've heard this town has some great fishing spots, so I thought I'd try my luck.#$e#So far, I'm totally not disappointed. $1",
+  "ItsBenterKarl.Dialogue.0H-Winter-1": "Ah, @, it's one good winter's day today.#$b#I'm happy for all the different fish that comes with it. $1",
+  "ItsBenterKarl.Dialogue.2H-1": "These parts are real peaceful. A nice break from the city's chaos.#$e#Anyway, nice talking to you. Maybe we'll bump into each other while I'm out fishing.",
+  "ItsBenterKarl.Dialogue.2H-2": "Hey there, @. Have you checked out the fishing spots around Pelican Town? Some real gems here.",
+  "ItsBenterKarl.Dialogue.2H-3": "Let's keep these conversations going. It's nice to have a friendly face to talk to in this new place.",
+  "ItsBenterKarl.Dialogue.2H-4": "Been trying out all different fishing techniques lately, figuring what works best in these waters.",
+  "ItsBenterKarl.Dialogue.2H-5": "Hmmm... Ice cream after dinner would be very nice. %revealtaste:ItsBenter_Karl:(O)233 #$e#Oh, I'm just planning for a good time. $1",
+  "ItsBenterKarl.Dialogue.2H-6": "I've heard the riverbank is a good place to fish. Have you had any luck there?",
+  "ItsBenterKarl.Dialogue.2H-7": "The shop on the beach pier has a surprisingly well-selected items. The man has good eyes.",
+  "ItsBenterKarl.Dialogue.2H-Winter-1": "Hot chocolate would be perfect to end the day. $1",
+  "ItsBenterKarl.Dialogue.2H-Summer-1": "I'd love to spend more time at the beach. The heat and the smell of sea... It just superb.",
+  "ItsBenterKarl.Dialogue.2H-Summer-2": "Hey, @, what a perfect summer day! It's the ideal time to be outdoors and, of course, to fish. $1",
+  "ItsBenterKarl.Dialogue.4H-1": "Back in the city, it's all concrete and hustle. Could sure use a break from that.",
+  "ItsBenterKarl.Dialogue.4H-2": "So, @, how's your journey in Pelican Town been so far? Finding your place in this community?",
+  "ItsBenterKarl.Dialogue.4H-3": "If you ever need some fishing tips, just give me the word. I've picked up a trick or two over the years.#$e#Speaking of the weather, just make sure you check how it will go weather before you head out fishing. Rainy days can be real good for certain catches.",
+  "ItsBenterKarl.Dialogue.4H-4": "What's your favorite spot to fish around here? I'd love some recommendations.",
+  "ItsBenterKarl.Dialogue.4H-5": "Some struggles with fishing. I think they just need to keep going. #$e#It's very rewarding when you get the hang of it. $1",
+  "ItsBenterKarl.Dialogue.4H-6": "Willy and I sometimes goes fishing together, we don't really talk because it might scare the fish.#$b#It's always nice to have a company.",
+  "ItsBenterKarl.Dialogue.4H-Summer-1": "Summer has its own unique charm. The warmth of the sun, the gentle breeze, it all adds to the experience.#$b#Yes, it can get sweaty at times, but hey. $1",
+  "ItsBenterKarl.Dialogue.4H-Winter-1": "I used to gather wood for the fireplace. Just walking on the forest by myself. #$b#Now we just use the heater. $1",
+  "ItsBenterKarl.Dialogue.6H-1": "Oh hey there, @. It's nice seeing you again.#$b#You know, I'm starting to feel like we're becoming real good friends. $1",
+  "ItsBenterKarl.Dialogue.6H-2": "Have you had any memorable fishing tales in the valley? I'd sure love to hear it",
+  "ItsBenterKarl.Dialogue.6H-3": "It's important to put in an honest day's work.#$b#There's no better feeling...",
+  "ItsBenterKarl.Dialogue.6H-4": "My wife might not understand a lot deal of fishing, but she knows how it helps me.",
+  "ItsBenterKarl.Dialogue.6H-5": "Work is work, there's ups and the downs. #$e#Let's not spoil the mood shall we?",
+  "ItsBenterKarl.Dialogue.6H-6": "Fishing is a bit like life, you know? Sometimes you get a big catch, and other times, you have to be patient and enjoy the moment.",
+  "ItsBenterKarl.Dialogue.6H-7": "You know, I once shaved off my mustache for a truth and dare. Instant regret, but it made for a good laugh. $1",
+  "ItsBenterKarl.Dialogue.6H-8": "I might have bit too much fun last night... $1#$b#There' still a little bit of headache. Should've not drink that much.",
+  "ItsBenterKarl.Dialogue.6H-9": "There's not much anglers around here, so I try buying supplies from Willy when I can. #$b#Gotta look out for friends! $1",
+  "ItsBenterKarl.Dialogue.8H-1": "Sometimes, when fishing, everything just drifts away.#$b#It's like a meditation, but slightly more productive.#$e#If you're doing it right, you'll get a fish out of it. $1",
+  "ItsBenterKarl.Dialogue.8H-2": "Growing up in a small town is something special.#$b#Life was simpler back then. $2",
+  "ItsBenterKarl.Dialogue.8H-3": "For what it's worth, my job has provided some stability, which has allowed me rediscover fishing.",
+  "ItsBenterKarl.Dialogue.8H-4": "*yawn* I got caught late at work last night. #$e#Not ideal, but there's not much use in complaining here.",
+  "ItsBenterKarl.Dialogue.8H-5": "Them peeps at the office, they're like family. Make workdays much more enjoyable.",
+  "ItsBenterKarl.Dialogue.8H-6": "Work, well... Even in the bustling city also has its good.#$e#There's a certain satisfaction in giving your all to a task and seeing it through to the end.",
+  "ItsBenterKarl.Dialogue.8H-7": "Linus lifestyle is really, different. It's truly something to see how everyone seems to be accepting of it.",
+  "ItsBenterKarl.Dialogue.8H-Winter-1": "You know, it's kinda funny how the seasons can make you feel, @. #$b#There's something truly special about sitting by the fireplace on a chilly day, ain't there?",
+  "ItsBenterKarl.Dialogue.8H-Fall-1": "My wife likes this season so much. She's very happy seeing leaves start turning red and gold.",
+  "ItsBenterKarl.Dialogue.8H-Summer-1": "While it's important to work hard, make sure you don't overexert yourself. Especially in the summer heat.",
+  "ItsBenterKarl.Dialogue.10H-1": "My parents were hardworking folks, I sure hope I make them proud.#$e#I know they are...",
+  "ItsBenterKarl.Dialogue.10H-2": "The valley has some of the best fishing spots I've ever encountered.#$b#This place is a total paradise for anglers. $1",
+  "ItsBenterKarl.Dialogue.10H-3": "Hey, @, good to see you again. We've become real good friends, haven't we? $1",
+  "ItsBenterKarl.Dialogue.10H-4": "It's real nice talking to you.#$e#Oh, my work peeps are cool, I guess it must be the different place and time. $1",
+  "ItsBenterKarl.Dialogue.10H-5": "I used to go on fishing trips with my father. Beautiful memories...",
+  "ItsBenterKarl.Dialogue.10H-6": "Emma and I have talked a lot about finding balance in our lives. She understands that Pelican Town is my escape.",
+  "ItsBenterKarl.Dialogue.10H-7": "My career is advancing well. It provides financial stability and a future for Emma and I.",
+  "ItsBenterKarl.Dialogue.10H-8": "My job in the city may have its challenges, but it's also where I've met my good friends.#$b#We share stories and experiences, and they've been a true buddy#$e#I'm grateful. $1",
+  "ItsBenterKarl.Dialogue.10H-Class-1": "I'm settling into a new routine. Going to class at night still feel a bit surreal to me.",
+  "ItsBenterKarl.Dialogue.10H-Class-2": "It's nice to see many people my age in the class. #$b#Too bad it's always too late to get together for some coffee.",
+  "ItsBenterKarl.Dialogue.10H-Class-3": "It can feel bit too much with work the class. But I know I'll manage.",
+  "ItsBenterKarl.Dialogue.10H-Class-4": "Well, I don't know if the education going to really pay off... #$b#But we gotta do what we can. $1",
+  "ItsBenterKarl.Dialogue.10H-Class-5": "I feel like I'm learning so much @. I believe things are going to work out just fine.",
+
   //Diane
   "ItsBenterDiane.Name": "Diane",
   "ItsBenterDiane.Gifts_Loved": "Oh, @, you truly have a discerning taste! This is absolutely splendid.",
